<resources>
    <string name="app_name">Zoeken</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="inscription">S\'inscrire</string>
    <string name="connexion">Connexion</string>
    <string name="titre_page_authentification">Bienvenue sur Zoeken</string>
    <string name="message_bienvenue">Rejoins plus de 2 millions d\'élèves qui utilisent Zoeken pour faire leur suivi de stages.</string>
    <string name="app_logo">Zoeken Logo</string>
    <string name="titre_connexion">Ha, te revoilà !</string>
    <string name="message_connexion">Nous sommes si heureux de te revoir !</string>
    <string name="information_du_compte">INFORMATIONS DU COMPTE</string>
    <string name="email">E-mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="btn_ajouter_compagnie">Ajouter une compagnie</string>
    <string name="ic_map">Map</string>
    <string name="nom_de_la_compagnie">Nom de la compagnie</string>
    <string name="nom_du_contact">Nom du contact</string>
    <string name="ajouter">Ajouter</string>
    <string name="date_contact">Date de contact</string>
    <string name="code_postal">Code postal</string>
    <string name="ville">Ville</string>
    <string name="adresse">Adresse</string>
    <string name="site_web">Site web</string>
    <string name="telephone">Numéro de téléphone</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="appeler">Appeler</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="confirmation_mot_de_passe">Confirmation mot de passe</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="dashboard">Dashboard</string>
    <string name="province">Province</string>
    <string name="stage_trouv">Stage trouvé</string>
    <string name="texte">Texte</string>
    <string name="recherche">Recherche</string>
    <string name="stages_appliqu_es">stages appliqués</string>
    <string name="nb">NB</string>
</resources>